[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! this is a webapp of dharmaraj.:D.
+            welocme to my webapp-dharma
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
