--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            welocme to my webapp-dharma
+            welcome to my webapp-dharma
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
