[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            welcome to my webapp-dharma
-			try hard 
+            <h4>VANAKKAM</h4>
+            -Dharma
+			
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
