[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,11 @@
         <div class="center text-big bold">
             <h1>VANAKKAM</h1>
             -Dharmaraj:)
+            <h2>new heading</h2>
+            <ol>
+                <li> 1.one point-u</li>
+                <li>2. two point-u</li>
+            </ol>
 			
         </div>
         <script type="text/javascript" src="/ui/main.js">
