[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,12 +9,12 @@
         </div>
         <br>
         <div class="center text-big bold">
-            <h1>VANAKKAM</h1>
+            <h4>VANAKKAM</h4>
             -Dharmaraj:)
-            <h2>new heading</h2>
+            <h4>new heading</h4>
             <ol>
-                <li> 1.one point-u</li>
-                <li>2. two point-u</li>
+                <li> 1.One point-u</li>
+                <li>2. Two point-u</li>
             </ol>
 			
         </div>
