[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,17 +5,13 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://s-media-cache-ak0.pinimg.com/564x/48/bd/3f/48bd3f6e928d7cb4b8d499cb0f96b8a8.jpg"/>
         </div>
         <br>
         <div class="center text-big bold">
             <h4>VANAKKAM</h4>
-            -Dharmaraj:)
-            <h4>new heading</h4>
-            <ol>
-                <li> 1.One point-u</li>
-                <li>2. Two point-u</li>
-            </ol>
+            <p>-Dharmaraj:)</p>
+            
 			
         </div>
         <script type="text/javascript" src="/ui/main.js">
