--- a/ui/page1.html
+++ b/ui/page1.html
@@ -1,2 +1,21 @@
 <html>
+<head>
+    <title>
+        Page1 | Dharmaraj
+    </title>
+</head>
+<body>
+       <div>
+         <h3>Welcome to page 1</h3>
+       </div>
+<div>
+    <a href ="/">Back to home</a>
+</div>
+
+
+
+
+</body>
+
 </html>
+
