[imad-console] Updates ui/page1.html

--- a/ui/page1.html
+++ b/ui/page1.html
@@ -11,6 +11,19 @@
 <div>
     <a href ="/">Back to home</a>
 </div>
+<p>
+    helooooo
+    helooooo
+    helooooo
+    helooooo
+    helooooo
+    helooooo
+    helooooohelooooo
+    helooooo
+    helooooo
+    helooooo
+    helooooo
+</p>
 
 
 
