[imad-console] Updates ui/page1.html

--- a/ui/page1.html
+++ b/ui/page1.html
@@ -11,6 +11,7 @@
 <div>
     <a href ="/">Back to home</a>
 </div>
+<div class="container">
 <p>
     helooooo
     helooooo
@@ -24,7 +25,7 @@
     helooooo
     helooooo
 </p>
-
+</div>
 
 
 
