--- a/ui/page1.html
+++ b/ui/page1.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link href="/ui/style.css" rel="stylesheet" />
+    <script src="/ui/main.js">/script>
     <title>
         Page1 | Dharmaraj
     </title>
