--- a/ui/page1.html
+++ b/ui/page1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link href="/ui/style.css" rel="stylesheet" />
-    <script src="/ui/main.js">/script>
+    <script type="text/javascript" src="/ui/main.js">
     <title>
         Page1 | Dharmaraj
     </title>
