[imad-console] Updates ui/page1.html

--- a/ui/page1.html
+++ b/ui/page1.html
@@ -1,14 +1,14 @@
 <html>
-<head>
+  <head>
     <link href="/ui/style.css" rel="stylesheet" />
-    <script type="text/javascript" src="/ui/main.js">
+    <script type="text/javascript" src="/ui/main.js"></script>
     <title>
         Page1 | Dharmaraj
     </title>
 </head>
 <body>
        <div>
-         <h3>Welcome to page 1</h3>
+         <h3>Welcome to page1</h3>
        </div>
 <div>
     <a href ="/">Back to home</a>
