local changes on page1

--- a/ui/page1.html
+++ b/ui/page1.html
@@ -14,19 +14,19 @@
     <a href ="/">Back to home</a>
 </div>
 <div class="container">
-<p>
-    helooooo
-    helooooo
-    helooooo
-    helooooo
-    helooooo
-    helooooo
-    helooooohelooooo
-    helooooo
-    helooooo
-    helooooo
-    helooooo
-</p>
+<ol>
+    <li>helooooo</li>
+    <li>helooooo</li>
+    <li>helooooo</li>
+    <li>helooooo</li>
+    <li>helooooo</li>
+    <li>helooooo</li>
+    <li>helooooohelooooo</li>
+    <li>helooooo</li>
+    <li>helooooo</li>
+    <li>helooooo</li>
+    <li>helooooo</li>
+</ol>
 </div>
 
 
