--- a/ui/page1.html
+++ b/ui/page1.html
@@ -13,7 +13,7 @@
 <div>
     <a href ="/">Back to home</a>
 </div>
-<div class="container">
+<div class="container" id="text-content">
 <ol>
     <li>helooooo</li>
     <li>helooooo</li>
