[imad-console] Updates ui/page1.html

--- a/ui/page1.html
+++ b/ui/page1.html
@@ -28,7 +28,9 @@
     <li>helooooo</li>
 </ol>
 </div>
+
 <script type="text/javascript" src="/ui/main.js"></script>
+<h2 id ="menu">menu</h2>
 
 
 </body>
