[imad-console] Updates ui/page1.html

--- a/ui/page1.html
+++ b/ui/page1.html
@@ -13,7 +13,8 @@
 <div>
     <a href ="/">Back to home</a>
 </div>
-<div class="container" id="text-content">
+<div>img src='ui/minion.jpg</div>
+<div class="container" >
 <ol>
     <li>helooooo</li>
     <li>helooooo</li>
