[imad-console] Updates ui/page1.html

--- a/ui/page1.html
+++ b/ui/page1.html
@@ -13,7 +13,7 @@
 <div>
     <a href ="/">Back to home</a>
 </div>
-<div>img src='ui/minion.jpg</div>
+<div><img src='ui/minion.jpg'/></div>
 <div class="container" >
 <ol>
     <li>helooooo</li>
