[imad-console] Updates ui/page1.html

--- a/ui/page1.html
+++ b/ui/page1.html
@@ -13,7 +13,7 @@
 <div>
     <a href ="/">Back to home</a>
 </div>
-<img src='ui/madi.png'/>
+<img id ='img' src='ui/madi.png'/>
 <div class="container" >
 <ol>
     <li>helooooo</li>
