[imad-console] Updates ui/page2.html

--- a/ui/page2.html
+++ b/ui/page2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
-<h3> hi page 2 !!</h3>
+<script type="text/javascript" src="/ui/page.js"></script>
+<h3> hi <button id ='counter'>click me </button>has been clicked<span id= 'count'>0</span>times</h3>
 </html>
