[imad-console] Updates ui/page2.html

--- a/ui/page2.html
+++ b/ui/page2.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
-<script type="text/javascript" src="/ui/page.js"></script>
+<head>
+    <script type="text/javascript" src="/ui/page.js"></script>
+</head>
+
+<body>
 <h3> hi <button id ='counter'>click me </button>has been clicked<span id= 'count'>0</span>times</h3>
+</body>
+
 </html>
