--- a/ui/page2.html
+++ b/ui/page2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript" src="/ui/server.js"></script>
     <script type="text/javascript" src="/ui/page.js"></script>
 </head>
 
