--- a/ui/page2.html
+++ b/ui/page2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+  <script type="text/javascript" src="/ui/main.js"></script>  
     
 </head>
 
 <body>
-<script type="text/javascript" src="/ui/page.js"></script>
-<h3> hi <button id ='counter'>click me </button>has been clicked<span id= 'count'>0</span>times</h3>
+
+<h3> hi  <button id ='counter'>  click me  </button>  has been clicked  <span id= 'count'>  0  </span>  times  </h3>
 </body>
 
 </html>
