--- a/ui/page2.html
+++ b/ui/page2.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<h3> hi  <button id ='counter'>  click me  </button>  has been clicked  <span id= 'count'>  0  </span>  times  </h3>
+<h3> hi  <button id ='button'>  click me  </button>  has been clicked  <span id= 'span'>  0  </span>  times  </h3>
 </body>
 
 </html>
