--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
         <br>
         <div class="center text-big bold">
             <h3>HEALLLO</h3>
-			<h4>clicked <button id ='button'> click me </button><span id='span'> 0 </span></h4>
+			<h4>clicked <button id ='button'> click me </button><span id='span'> '0' </span></h4>
             
            </div>
             
