[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         <div class="center text-big bold">
             <h3>HEALLLO</h3>
 			<hr>
-			<h4>You clicked <button id ='button'> ME </button><span id='span'> '0' </span> times</h4>
+			<h4>You clicked--> <button id ='button'> ME </button><span id='span'> '0' </span> times</h4>
             
            </div>
             
