--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
             
            </div>
             <hr>
-            <input type='text' id=name placeholder='name'></input>
+            <input type='text' id=name placeholder='comment'></input>
             <input type='submit' value='submit'></input>
             <ul>
                 <li>name-1</li>
