--- a/ui/index.html
+++ b/ui/index.html
@@ -14,8 +14,8 @@
            </div>
             <hr>
             <input type='text' id=name placeholder='comment'></input>
-            <input type='submit' value='submit'></input>
-            <ul>
+            <input type='submit' value='submit' id='submit_btn'></input>
+            <ul id='listed'>
                 <li>name-1</li>
                 <li>name-2</li>
                 <li>name-3</li>
