--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <title>
+        Albert Einsten
+    </title>
+</head>
+<body>
+    Welcome to article one 
+</body>
 
 </html>
+
