[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
     </title>
 </head>
 <body>
-    Welcome to article one 
+    <img src='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'/> 
 </body>
 
 </html>
