[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="/ui/style.css" rel="stylesheet" />
     <title>
         Albert Einsten
     </title>
 </head>
 <body>
-    <img src='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'/> 
+    <img id='fit' src='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'/> 
 </body>
 
 </html>
