[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,8 +6,9 @@
         Albert Einsten
     </title>
 </head>
-<body>
-    <img id='fit' src='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'/> 
+<body id='fit' background='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'>
+    
+    <!--<img id='fit' src='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'/> -->
 </body>
 
 </html>
