[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
         Albert Einsten
     </title>
 </head>
-<body id='fit' background='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'>
+<body  background='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'>
     
     <h3>hi einstien ji </h3>
     <!--<img id='fit' src='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'/> -->
