[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,7 @@
 </head>
 <body  background='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'>
     
-    <h3>hi einstien ji </h3>
+    <h3 style=font-color: red>hi einstien ji </h3>
     <!--<img id='fit' src='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'/> -->
 </body>
 
