--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
         Albert Einsten
     </title>
 </head>
-<body  background='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'>
+<body id='body-1'  >
     
     <h3 style=font-color: red>hi einstien ji </h3>
     <!--<img id='fit' src='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'/> -->
