--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,8 +8,8 @@
 </head>
 <body id='body-1'  >
     
-    <h3 style=font-color: red>hi einstien ji </h3>
-    <!--<img id='fit' src='https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg'/> -->
+    <h3 style='font-color: red'>hi einstien ji </h3>
+    
 </body>
 
 </html>
