[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,9 @@
 </head>
 <body id='body-1'  >
     
-    <h3 style='font-color: red'>hi einstien ji </h3>
+    <p id='links'>
+        links
+    </p>
     
 </body>
 
