[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,7 +10,9 @@
     
     <div id='links'>
         <div>
-            three links would be served here
+            <a href='https://pbs.twimg.com/profile_images/661244915725287424/C7vPnSSE.jpg'>
+                link-1
+            </a>
         </div>
     </div>
     
