[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,7 +10,7 @@
     
     <div id='links'>
         <div>
-            <a href='https://pbs.twimg.com/profile_images/661244915725287424/C7vPnSSE.jpg'>
+            <a href='https://dharma111.imad.hasura-app.io/article-two'>
                 link-1
             </a>
         </div>
